force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <label>キャンペーンタスク</label>
    <pluralLabel>キャンペーンタスク</pluralLabel>
    <nameField>
        <label>タスク名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 