force-app/main/default/objects/Task__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <label>担当者</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks</relationshipName>
</CustomField> 