force-app/main/default/objects/Task__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>キャンペーン</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>タスク</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>MasterDetail</type>
</CustomField> 