force-app/main/default/objects/Task__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>期限</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 